--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ basic_assignment/titanic/.ipynb_checkpoints/
 basic_assignment/titanic/output_data/
 basic_assignment/spamham/
 assignment2/data/
+assignment2/.ipynb_checkpoints/
