--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,4 @@ basic_assignment/titanic/output_data/
 basic_assignment/spamham/
 assignment2/data/
 assignment2/.ipynb_checkpoints/
+assignment2/Model/.ipynb_checkpoints/
