--- a/.gitignore
+++ b/.gitignore
@@ -8,3 +8,4 @@ basic_assignment/spamham/
 assignment2/data/
 assignment2/.ipynb_checkpoints/
 assignment2/Model/.ipynb_checkpoints/
+assignment2/Model/data/
