--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,5 @@ assignment2/data/
 assignment2/.ipynb_checkpoints/
 assignment2/Model/.ipynb_checkpoints/
 assignment2/Model/data/
+assignment2/Model/engineered_test_data.csv
+assignment2/Model/engineered_training_data.csv
